fix overflow wrapperChat

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,11 +12,11 @@
 
 header {
   padding-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 h1 {
   text-align: center;
-  margin-bottom: 1rem;
 }
 
 .wrapperBody {
@@ -29,6 +29,9 @@ h1 {
 
 main {
   height: 100%;
+  display: flex;
+  align-items: center;
+  overflow: auto;
 }
 
 .wrapperMain {
@@ -37,7 +40,7 @@ main {
   border-radius: 1rem;
   margin: 0 8px;
   height: 100%;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 #wrapperChat {
